bin/testsuite/tests/compiler/src/errors/compiler2390.swg
#global testerror "Err0077"

#[Swag.Test]
func main1(s: bool)
{
    @print("toto")
}
